--- a/index.html
+++ b/index.html
@@ -154,9 +154,9 @@
 		<div class="linkl">
 		<ul>
                             <li><a href="http://5genvpiao.com/" target="_blank">五姑娘导航</a></li>
-                            <li><a href="http://500dh.cc/" target="_blank">500导航</a></li>
-                            <li><a href="http://www.dabodh.com/" target="_blank">大波导航</a></li>
                             <li><a href="http://landh.club/" target="_blank">蓝导航</a></li>
+                            <li><a href="http://www.dabodh.com/" target="_blank">大波导航</a></li>
+                            <li><a href="http://500dh.cc/" target="_blank">500导航</a></li>
                             <li><a href="http://doufu2.com/" target="_blank">豆福色导航</a></li>
                             <li><a href="http://www.09kg.com/" target="_blank">第九福利导航</a></li>
                             <li><a href="http://www.3031177.com/" target="_blank">通幽福利导航</a></li>
@@ -165,14 +165,13 @@
                             <li><a href="http://www.fulidh.info/" target="_blank">夜火福利导航</a></li>
                             <li><a href="http://www.haoavdh.com/" target="_blank">找AV导航</a></li>
                             <li><a href="http://www.javavdh.com/" target="_blank">Javav导航</a></li>
-                            <li><a href="http://bim10.info/" target="_blank">Bim精品导航</a></li>
                             <li><a href="http://www.caoliufabu.com/" target="_blank">草榴发布页</a></li>
                             <li><a href="http://att12.com/" target="_blank">A天堂导航</a></li>
                             <li><a href="http://bigefuli.com/" target="_blank">逼格福利导航</a></li>
                             <li><a href="http://www.776dh.com/" target="_blank">776福利导航</a></li>
                             <li><a href="http://www.666k6.com/" target="_blank">666福利导航</a></li>
                             <li><a href="http://www.uusdh.com/" target="_blank">悠悠色导航</a></li>
-                            <li><a href="http://www.diyise.co/" target="_blank">第一色导航</a></li>
+                            <li><a href="http://www.idiyi.biz/" target="_blank">第一色导航</a></li>
                             <li><a href="http://www.jiujiudizhi.com/" target="_blank">久久福利导航</a></li>
                             <li><a href="https://www.gavdh.com/" target="_blank">GAV福利导航</a></li>
                             <li><a href="http://www.damodh.com/" target="_blank">51VOB导航</a></li>
@@ -206,6 +205,9 @@
                             <li><a href="http://www.dafjdh.com/" target="_blank">打飞机导航</a></li>
                             <li><a href="http://yeyeliu.top/" target="_blank">夜夜流</a></li>
                             <li><a href="http://www.cangjigedh.com/" target="_blank">藏姬阁导航</a></li>
+                            <li><a href="http://www.1dh.info/" target="_blank">S站第一导航</a></li>
+                            <li><a href="http://www.xiushe.info/" target="_blank">羞射福利导航</a></li>
+                            <li><a href="http://www.jpmdh.info/" target="_blank">金瓶梅福利导航</a></li>
                             <li><a href="http://g.e20.ru/" target="_blank">绿色小导航</a></li>                              
 				    </ul>
 		</div>
@@ -277,7 +279,7 @@
 <li><a href="http://www.3555ss.com/" target="_blank">私库AV</a></li>
 <li><a href="http://www.xxoo.tm/" target="_blank">男人本涩</a></li>
 <li><a href="http://a7s7.com/" target="_blank">Sex169影城</a></li>
-<li><a href="http://uu9090.net/" target="_blank">18AV</a></li>
+<li><a href="http://hot1024.win/" target="_blank">18AV</a></li>
 <li><a href="http://avpapa.co/" target="_blank">Avpapa</a></li>
 <li><a href="http://www.5xsq123.com/" target="_blank">5X社区</a></li>
 <li><a href="http://www.yeshemao520.top/" target="_blank">夜涩猫</a></li>
@@ -305,7 +307,7 @@
 <li><a href="http://www.jiuseteng.net/" target="_blank">九涩腾</a></li>
 <li><a href="http://www.jav2be.com/" target="_blank">绝色媚影</a></li>
 <li><a href="http://www.jav513.com/" target="_blank">宅男频道</a></li>
-<li><a href="http://91.t9l.space/?fromuid=697480" target="_blank">91自拍论坛</a></li>
+<li><a href="http://www.megaline.co/Cazn2" target="_blank">91porn</a></li>
 				    </ul>
 		</div>
 		</div>
@@ -369,7 +371,7 @@
 <li><a href="http://jav247.net/" target="_blank">Jav247</a></li>
 <li><a href="http://jadult.net/" target="_blank">Jadult</a></li>
 <li><a href="http://javhd3x.com/" target="_blank">JAVHD3X</a></li>
-<li><a href="http://muryouav-house.com/" target="_blank">JAVROOT</a></li>
+<li><a href="http://javroot.com/" target="_blank">JAVROOT</a></li>
 <li><a href="http://smv.to/" target="_blank">SHARE MOVIE</a></li>
 <li><a href="http://www.youtuck.com/" target="_blank">YouTuck</a></li>
 <li><a href="https://www.pornsia.com/" target="_blank">Pornsia</a></li>
@@ -464,6 +466,7 @@
 <li><a href="http://iywzd.info/bbs/?fromuid=574073" target="_blank">欲望之都</a></li>
 <li><a href="http://www.39ye.com/?fromuid=54648" target="_blank">爱妻俱乐部</a></li>
 <li><a href="http://192.161.172.130/forum.php?fromuid=3479" target="_blank">欢乐夫妻</a></li>
+<li><a href="http://www.jiedianr.cn/">姐点儿直播</a></li>
 <li><a href="http://www.weipaipapa.com/" target="_blank">微拍啪啪</a></li>
 <li><a href="http://sezhan.net/" target="_blank">微拍视频</a></li>
 <li><a href="http://www.weipaiwang.cc/" target="_blank">微拍网</a></li>
