--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <html>
 <head>
 <meta charset="utf-8"/>
-<title>蓝色小导航 - 草榴小导航 - 各大网站最新地址</title>
-<meta name="keywords" content="蓝色导航,蓝色小导航,草榴导航,福利导航,1024核工厂最新地址,福利导航,xiao77,bt爱城,爱唯侦查,1024基地手机看电影,各大网站地址发布站"/>
-<meta name="description" content="蓝色导航,草榴导航,蓝色小导航,福利导航,xiao77,bt爱城,爱唯侦查,1024基地手机看电影,各大网站地址发布站。"/>
+<title>蓝色小导航 - 各大网站最新地址</title>
+<meta name="keywords" content="蓝色导航,蓝色小导航,福利导航,福利导航,各大网站地址发布站"/>
+<meta name="description" content="蓝色导航,蓝色小导航,福利导航,福利导航,各大网站地址发布站"/>
 <meta name="viewport" content="width=device-width"/>
 <link rel="stylesheet" type="text/css" href="css.css" />
 </head>
@@ -66,24 +66,24 @@
 <li><a href="http://lu6vip.com/" target="_blank">撸6VIP网</a></li>
 <li><a href="http://www.mf28.xyz/" target="_blank">蜜蜂社区</a></li>
 <li><a href="http://www.yesir.co/forum.php" target="_blank">夜色精選論壇</a></li>
-<li><a href="http://avhaobt.com/?fromuid=73855" target="_blank">天空论坛</a></li>
+<li><a href="http://twhav.com/?fromuid=73855" target="_blank">天空论坛</a></li>
 <li><a href="http://www.hdp2p.net/?fromuid=320" target="_blank">99爱唯工厂</a></li>
 <li><a href="http://166.62.61.163/?fromuid=16201" target="_blank">涩呢妹·SNM</a></li>
 <li><a href="http://162.211.95.61/bbs/?fromuid=715" target="_blank">老王社区</a></li>
 <li><a href="http://97kaixin.com/" target="_blank">97开心</a></li>
 <li><a href="http://fuli3758.com/" target="_blank">福利社小说</a></li>
 <li><a href="http://6ni.info/forum.php" target="_blank">365论坛</a></li>
-<li><a href="http://www.18p2p.com/forum/index.php" target="_blank">18p2p</a></li>
+<li><a href="http://18board.com/forum/" target="_blank">18p2p</a></li>
 <li><a href="http://www.sewangchao3.com/" target="_blank">夜色王朝</a></li>
 <li><a href="http://108.62.192.126/" target="_blank">PLUS28</a></li>
 <li><a href="http://www.3pforum.com/bbs/?fromuid=143829" target="_blank">3P论坛</a></li>
 <li><a href="http://www.new-3lunch.net/?fromuid=441850" target="_blank">New-3Lunch</a></li>
 <li><a href="http://waikeung.info/?fromuid=376863" target="_blank">WK綜合論壇</a></li>
 <li><a href="http://173.192.147.22/?fromuid=1209073" target="_blank">爱碧论坛</a></li>
-<li><a href="http://goxav.cf/?fromuid=1382595" target="_blank">XIAAV论坛</a></li>
+<li><a href="http://www.kanxav.ml/?fromuid=1382595" target="_blank">XIAAV论坛</a></li>
 <li><a href="http://www.qiseshequ.info/" target="_blank">奇涩社区</a></li>
 <li><a href="http://aixxbbs.net/?fromuid=1199668" target="_blank">九爱城社区</a></li>
-<li><a href="http://www.mayahaus.com/index.php" target="_blank">玛雅网</a></li>
+<li><a href="http://www.mayabeer.com/index.php" target="_blank">玛雅网</a></li>
 <li><a href="http://vip.taoyin365.com/?fromuid=153059" target="_blank">桃隐社区</a></li>
 <li><a href="http://www.avlang7.info/index.php?a=3886" target="_blank">AV狼</a></li>
 <li><a href="http://ddxxbbs.net/?fromuid=406113" target="_blank">新不夜城</a></li>
@@ -102,7 +102,7 @@
 <li><a href="http://www.piring.com/bbs/tcn/?fromuid=2061069" target="_blank">痴汉俱乐部</a></li>
 <li><a href="http://108.171.242.244/" target="_blank">MyHd1080</a></li>
 <li><a href="http://w1.vz05.biz/pw/" target="_blank">1024核工厂</a></li>
-<li><a href="http://www.lsg258.com/?fromuid=1577" target="_blank">老司机论坛</a></li>
+<li><a href="http://www.lsg258.cc/?fromuid=1577" target="_blank">老司机论坛</a></li>
 <li><a href="http://redditlist.com/nsfw" target="_blank">redditlist</a></li>
 <li><a href="http://45.32.51.95/?fromuid=2571826" target="_blank">捷克论坛</a></li>
 <li><a href="http://www.stiantang.info/?fromuid=24994" target="_blank">涩天堂</a></li>
@@ -110,7 +110,7 @@
 <li><a href="http://catcatforum.com/?fromuid=3045850" target="_blank">貓貓論壇</a></li>
 <li><a href="http://bbs.gogo.la/" target="_blank">高高啦討論區</a></li>
 <li><a href="http://bbs.sex169.biz/?fromuid=141932" target="_blank">SEX169 論壇</a></li>
-<li><a href="http://www.p2plol.com/" target="_blank">咪咪爱</a></li>
+<li><a href="http://www.mimibeer.com/" target="_blank">咪咪爱</a></li>
 <li><a href="http://www.naluone-gp.com/forum/index.php" target="_blank">娜鲁湾论坛</a></li>
 <li><a href="http://www.ykt6.com/" target="_blank">迎客堂</a></li>
 <li><a href="http://dio88.net/?fromuid=2077160" target="_blank">魔王の家</a></li>
@@ -143,7 +143,7 @@
 <li><a href="http://tmdkao.com/index.php?u=296710&ext=96e5d" target="_blank">草榴社区4</a></li>
 <li><a href="http://c6.d5j.biz/index.php?u=296710&ext=96e5d" target="_blank">草榴社区5</a></li>
 <li><a href="http://cl.h5e.biz/index.php?u=296710&ext=96e5d" target="_blank">草榴社区6</a></li>
-<li><a href="http://c6.j8e.biz/index.php?u=296710&ext=96e5d" target="_blank">草榴社区7</a></li>
+<li><a href="http://clclcl.me/index.php?u=296710&ext=96e5d" target="_blank">草榴社区7</a></li>
 				    </ul>
 		</div>
 		</div>
@@ -249,6 +249,7 @@
 <li><a href="http://www.91sheav.win/" target="_blank">就要射AV</a></li>
 <li><a href="http://www.92sheav.win/" target="_blank">就爱射AV</a></li>
 <li><a href="http://www.912hh.vip/" target="_blank">912在线AV</a></li>
+<li><a href="http://www.cpzx1.pw/" target="_blank">超碰视频</a></li>
 <li><a href="http://www.taoluyingyuan.com/" target="_blank">套路影院</a></li>
 <li><a href="http://www.av0769.com/" target="_blank">东莞av</a></li>
 <li><a href="http://www.91lupao.com/" target="_blank">狠撸炮</a></li>
@@ -391,7 +392,7 @@
 		<div class="linkl">
 		<ul>
 <li><a href="http://198.40.52.155/?fromuid=428789" target="_blank">偷窥客</a></li>
-<li><a href="http://www.ivnext.top/" target="_blank">少女写真论坛</a></li>
+<li><a href="http://www.ivnext.vip/" target="_blank">少女写真论坛</a></li>
 <li><a href="http://www.bomeifl.com/" target="_blank">大波妹</a></li>
 <li><a href="http://www.521yw.com/?fromuid=13485" target="_blank">我要原味</a></li>
 <li><a href="http://www.52yuanwei.club/?fromuid=190756" target="_blank">我爱原味网</a></li>
