--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
 <li><a href="http://162.211.95.61/bbs/?fromuid=715" target="_blank">老王社区</a></li>
 <li><a href="http://97kaixin.com/" target="_blank">97开心</a></li>
 <li><a href="http://fuli3758.com/" target="_blank">福利社小说</a></li>
+<li><a href="http://www.papapa88.com/?fromuid=123" target="_blank">啪啪啪88</a></li>
 <li><a href="http://6ni.info/forum.php" target="_blank">365论坛</a></li>
 <li><a href="http://18board.com/forum/" target="_blank">18p2p</a></li>
 <li><a href="http://www.sewangchao3.com/" target="_blank">夜色王朝</a></li>
@@ -143,7 +144,7 @@
 <li><a href="http://tmdkao.com/index.php?u=296710&ext=96e5d" target="_blank">草榴社区4</a></li>
 <li><a href="http://c6.d5j.biz/index.php?u=296710&ext=96e5d" target="_blank">草榴社区5</a></li>
 <li><a href="http://cl.h5e.biz/index.php?u=296710&ext=96e5d" target="_blank">草榴社区6</a></li>
-<li><a href="http://clclcl.me/index.php?u=296710&ext=96e5d" target="_blank">草榴社区7</a></li>
+<li><a href="http://dz.c7e.biz/index.php?u=296710&ext=96e5d" target="_blank">草榴社区7</a></li>
 				    </ul>
 		</div>
 		</div>
@@ -155,9 +156,11 @@
 		<ul>
                             <li><a href="http://5genvpiao.com/" target="_blank">五姑娘导航</a></li>
                             <li><a href="http://landh.club/" target="_blank">蓝导航</a></li>
-                            <li><a href="http://www.dabodh.com/" target="_blank">大波导航</a></li>
-                            <li><a href="http://500dh.cc/" target="_blank">500导航</a></li>
                             <li><a href="http://doufu2.com/" target="_blank">豆福色导航</a></li>
+                            <li><a href="http://500dh.cc/" target="_blank">500导航</a></li>
+                            <li><a href="http://www.dabodh.com/" target="_blank">大波导航</a></li>
+                            <li><a href="http://www.xinfuli.info/" target="_blank">新福利导航</a></li>
+                            <li><a href="http://www.xiushe.info/" target="_blank">羞射福利导航</a></li>                            
                             <li><a href="http://www.09kg.com/" target="_blank">第九福利导航</a></li>
                             <li><a href="http://www.3031177.com/" target="_blank">通幽福利导航</a></li>
                             <li><a href="http://www.hhzjzz.com/" target="_blank">蜜汁福利导航</a></li>
@@ -172,7 +175,6 @@
                             <li><a href="http://www.666k6.com/" target="_blank">666福利导航</a></li>
                             <li><a href="http://www.uusdh.com/" target="_blank">悠悠色导航</a></li>
                             <li><a href="http://www.idiyi.biz/" target="_blank">第一色导航</a></li>
-                            <li><a href="http://www.jiujiudizhi.com/" target="_blank">久久福利导航</a></li>
                             <li><a href="https://www.gavdh.com/" target="_blank">GAV福利导航</a></li>
                             <li><a href="http://www.damodh.com/" target="_blank">51VOB导航</a></li>
                             <li><a href="http://www.semmdh.com/" target="_blank">色妹妹导航</a></li>
@@ -206,7 +208,6 @@
                             <li><a href="http://yeyeliu.top/" target="_blank">夜夜流</a></li>
                             <li><a href="http://www.cangjigedh.com/" target="_blank">藏姬阁导航</a></li>
                             <li><a href="http://www.1dh.info/" target="_blank">S站第一导航</a></li>
-                            <li><a href="http://www.xiushe.info/" target="_blank">羞射福利导航</a></li>
                             <li><a href="http://www.jpmdh.info/" target="_blank">金瓶梅福利导航</a></li>
                             <li><a href="http://g.e20.ru/" target="_blank">绿色小导航</a></li>                              
 				    </ul>
@@ -465,9 +466,10 @@
 		<div class="linkl">
 		<ul>
 <li><a href="http://iywzd.info/bbs/?fromuid=574073" target="_blank">欲望之都</a></li>
+<li><a href="http://www.fu31.com/" target="_blank">互撸娃福利</a></li>
 <li><a href="http://www.39ye.com/?fromuid=54648" target="_blank">爱妻俱乐部</a></li>
 <li><a href="http://192.161.172.130/forum.php?fromuid=3479" target="_blank">欢乐夫妻</a></li>
-<li><a href="http://www.jiedianr.cn/">姐点儿直播</a></li>
+<li><a href="http://www.fu31.com/" target="_blank">互撸娃福利</a></li>
 <li><a href="http://www.weipaipapa.com/" target="_blank">微拍啪啪</a></li>
 <li><a href="http://sezhan.net/" target="_blank">微拍视频</a></li>
 <li><a href="http://www.weipaiwang.cc/" target="_blank">微拍网</a></li>
@@ -475,6 +477,7 @@
 <li><a href="http://www.weipaifuliw.com/" target="_blank">微拍福利网</a></li>
 <li><a href="http://www.83252525.com/" target="_blank">微拍福利视频</a></li>
 <li><a href="http://www.fulishipin.info/" target="_blank">微拍福利哇卡呀</a></li>
+<li><a href="http://www.jiedianr.cn/">姐点儿直播</a></li>
 <li><a href="http://xftec.com/forum.php?x=2122570" target="_blank">夫妻吧</a></li>
 <li><a href="http://www.852867.com/?fromuid=776852" target="_blank">蝴蝶俱乐部</a></li>
 <li><a href="http://www.xy69.info/?fromuid=678142" target="_blank">逍遥游</a></li>
