--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
 <li><a href="http://www.myforum.com.hk/discuz/?fromuid=854827" target="_blank">My Forum</a></li>
 <li><a href="http://catcatforum.com/?fromuid=3045850" target="_blank">貓貓論壇</a></li>
 <li><a href="http://bbs.gogo.la/" target="_blank">高高啦討論區</a></li>
+<li><a href="https://fastzone.org/?fromuid=99373" target="_blank">無限討論區</a></li>
 <li><a href="http://bbs.sex169.biz/?fromuid=141932" target="_blank">SEX169 論壇</a></li>
 <li><a href="http://www.mimibeer.com/" target="_blank">咪咪爱</a></li>
 <li><a href="http://www.naluone-gp.com/forum/index.php" target="_blank">娜鲁湾论坛</a></li>
@@ -158,8 +159,6 @@
                             <li><a href="http://landh.club/" target="_blank">蓝导航</a></li>
                             <li><a href="http://doufu2.com/" target="_blank">豆福色导航</a></li>
                             <li><a href="http://500dh.cc/" target="_blank">500导航</a></li>
-                            <li><a href="http://www.dabodh.com/" target="_blank">大波导航</a></li>
-                            <li><a href="http://www.xinfuli.info/" target="_blank">新福利导航</a></li>
                             <li><a href="http://www.xiushe.info/" target="_blank">羞射福利导航</a></li>                            
                             <li><a href="http://www.09kg.com/" target="_blank">第九福利导航</a></li>
                             <li><a href="http://www.3031177.com/" target="_blank">通幽福利导航</a></li>
@@ -168,8 +167,8 @@
                             <li><a href="http://www.fulidh.info/" target="_blank">夜火福利导航</a></li>
                             <li><a href="http://www.haoavdh.com/" target="_blank">找AV导航</a></li>
                             <li><a href="http://www.javavdh.com/" target="_blank">Javav导航</a></li>
-                            <li><a href="http://www.caoliufabu.com/" target="_blank">草榴发布页</a></li>
                             <li><a href="http://att12.com/" target="_blank">A天堂导航</a></li>
+                            <li><a href="http://www.dabodh.com/" target="_blank">大波导航</a></li>
                             <li><a href="http://bigefuli.com/" target="_blank">逼格福利导航</a></li>
                             <li><a href="http://www.776dh.com/" target="_blank">776福利导航</a></li>
                             <li><a href="http://www.666k6.com/" target="_blank">666福利导航</a></li>
@@ -238,6 +237,8 @@
 <li><a href="http://www.wpzy7.com/" target="_blank">超碰</a></li>
 <li><a href="http://9388av.com/" target="_blank">撸你妹吖</a></li>
 <li><a href="http://www.159cb.com/" target="_blank">159cb在线</a></li>
+<li><a href="http://www.8858av.com/" target="_blank">小电影</a></li>
+<li><a href="http://taohua888.info/" target="_blank">桃花视频</a></li>
 <li><a href="http://www.lxx01.co/" target="_blank">撸穴穴</a></li>
 <li><a href="http://www.56avs.us/" target="_blank">沃流视频</a></li>
 <li><a href="http://www.7u8e.com/" target="_blank">7菇8姨</a></li>
@@ -267,6 +268,7 @@
 <li><a href="http://www.yiyiporn.com/" target="_blank">依依碰</a></li>
 <li><a href="http://www.caobiao345.com/" target="_blank">我要操婊</a></li>
 <li><a href="http://www.yudongxian.com/" target="_blank">玉洞仙</a></li>
+<li><a href="http://lulunai.com/" target="_blank">撸撸奶</a></li>
 <li><a href="http://www.lu667.com/" target="_blank">撸一撸</a></li>
 <li><a href="http://www.99zzpp.com/" target="_blank">99自拍</a></li>
 <li><a href="http://go.60990.biz/" target="_blank">蝌蚪窝</a></li>
@@ -277,7 +279,7 @@
 <li><a href="http://lvn77.com/" target="_blank">撸女神</a></li>
 <li><a href="http://hhs02.com/" target="_blank">花和尚</a></li>
 <li><a href="http://www.meizyw.com/" target="_blank">mm资源网</a></li>
-<li><a href="http://www.avtb9.com/" target="_blank">AV淘宝</a></li>
+<li><a href="http://www.avtb55.com/" target="_blank">AV淘宝</a></li>
 <li><a href="http://www.3555ss.com/" target="_blank">私库AV</a></li>
 <li><a href="http://www.xxoo.tm/" target="_blank">男人本涩</a></li>
 <li><a href="http://a7s7.com/" target="_blank">Sex169影城</a></li>
@@ -285,7 +287,7 @@
 <li><a href="http://avpapa.co/" target="_blank">Avpapa</a></li>
 <li><a href="http://www.5xsq123.com/" target="_blank">5X社区</a></li>
 <li><a href="http://www.yeshemao520.top/" target="_blank">夜涩猫</a></li>
-<li><a href="http://www.99ww8.com/" target="_blank">久久热视频</a></li>
+<li><a href="http://www.99ff0.com/" target="_blank">久久热视频</a></li>
 <li><a href="http://www.rxl365.com/" target="_blank">任性撸</a></li>
 <li><a href="http://www.aotu9.com/" target="_blank">凹凸视频</a></li>
 <li><a href="http://www.lu2363.com/" target="_blank">撸尔山</a></li>
@@ -303,10 +305,11 @@
 <li><a href="http://huaidushi.info/" target="_blank">坏都市</a></li>
 <li><a href="http://www.600zyz.com/" target="_blank">97资源站</a></li>
 <li><a href="http://www.avtai3.com/" target="_blank">AvTai</a></li>
+<li><a href="https://www.w832.com/" target="_blank">202z</a></li>
 <li><a href="http://www.youppp.com/" target="_blank">有B吗？</a></li>
 <li><a href="http://www.av8d.co/" target="_blank">琪琪涩原</a></li>
 <li><a href="http://www.777vid.com/" target="_blank">PLAY 视频</a></li>
-<li><a href="http://www.jiuseteng.net/" target="_blank">九涩腾</a></li>
+<li><a href="http://www.3jiuseteng.com/" target="_blank">九涩腾</a></li>
 <li><a href="http://www.jav2be.com/" target="_blank">绝色媚影</a></li>
 <li><a href="http://www.jav513.com/" target="_blank">宅男频道</a></li>
 <li><a href="http://www.megaline.co/Cazn2" target="_blank">91porn</a></li>
@@ -553,7 +556,7 @@
 <li><a href="http://www.51shl.xyz/" target="_blank">色狐狸</a></li>
 <li><a href="http://www.uggdiy.com/" target="_blank">求番号吧</a></li>
 <li><a href="http://www.141jav.com/" target="_blank">141jav</a></li>
-<li><a href="http://mo688.net/" target="_blank">Dioguitar23</a></li>
+<li><a href="http://mo666.net/" target="_blank">Dioguitar23</a></li>
 <li><a href="http://javarchive.com/" target="_blank">JavArchive</a></li>
 <li><a href="http://marks.fm/contents/" target="_blank">AV事務所</a></li>
 <li><a href="http://sougouwiki.com/" target="_blank">素人系総合wiki</a></li>
@@ -760,7 +763,7 @@
 <li><a href="http://www.btmon.com/" target="_blank">BTMon</a></li>
 <li><a href="http://www.tokyotosho.info/" target="_blank">Tokyo Toshokan</a></li>
 <li><a href="http://torrent.sex169.biz/" target="_blank">SEX169 種子站</a></li>
-<li><a href="http://www.btzy56.com/" target="_blank">图图资源</a></li>
+<li><a href="http://www.btse69.com/" target="_blank">图图资源</a></li>
 <li><a href="http://bt.gg/" target="_blank">短磁链</a></li>
 <li><a href="https://btdb.in/" target="_blank">BTDB</a></li>
 <li><a href="http://www.cilibaba.com/" target="_blank">CiLiBaBa</a></li>
