--- a/index.html
+++ b/index.html
@@ -159,6 +159,7 @@
                             <li><a href="http://landh.club/" target="_blank">蓝导航</a></li>
                             <li><a href="http://doufu2.com/" target="_blank">豆福色导航</a></li>
                             <li><a href="http://500dh.cc/" target="_blank">500导航</a></li>
+                            <li><a href="http://www.xinfuli.info/" target="_blank">新福利导航</a></li>
                             <li><a href="http://www.xiushe.info/" target="_blank">羞射福利导航</a></li>                            
                             <li><a href="http://www.09kg.com/" target="_blank">第九福利导航</a></li>
                             <li><a href="http://www.3031177.com/" target="_blank">通幽福利导航</a></li>
