--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
 <li><a href="http://www.yxg163.com/?fromuid=5741" target="_blank">夜香阁</a></li>
 <li><a href="http://www.xmq03.com/" target="_blank">西门庆</a></li>
 <li><a href="http://www.jingjinglu2.com/" target="_blank">静静撸</a></li>
+<li><a href="https://www.nnpp99.com/" target="_blank">nnpp99</a></li>
 <li><a href="http://192.161.172.140/?fromuid=679071" target="_blank">御花王朝</a></li>
 <li><a href="http://www.ttsebbs.net/?fromuid=344876" target="_blank">顶涩网</a></li>
 <li><a href="http://c-street.us/bbs/?fromuid=164277" target="_blank">华人街</a></li>
@@ -157,7 +158,7 @@
 		<ul>
                             <li><a href="http://5genvpiao.com/" target="_blank">五姑娘导航</a></li>
                             <li><a href="http://landh.club/" target="_blank">蓝导航</a></li>
-                            <li><a href="http://doufu2.com/" target="_blank">豆福色导航</a></li>
+                            <li><a href="http://g.e20.ru/" target="_blank">绿色小导航</a></li> 
                             <li><a href="http://500dh.cc/" target="_blank">500导航</a></li>
                             <li><a href="http://www.xinfuli.info/" target="_blank">新福利导航</a></li>
                             <li><a href="http://www.xiushe.info/" target="_blank">羞射福利导航</a></li>                            
@@ -169,6 +170,7 @@
                             <li><a href="http://www.haoavdh.com/" target="_blank">找AV导航</a></li>
                             <li><a href="http://www.javavdh.com/" target="_blank">Javav导航</a></li>
                             <li><a href="http://att12.com/" target="_blank">A天堂导航</a></li>
+                            <li><a href="http://doufu2.com/" target="_blank">豆福色导航</a></li>
                             <li><a href="http://www.dabodh.com/" target="_blank">大波导航</a></li>
                             <li><a href="http://bigefuli.com/" target="_blank">逼格福利导航</a></li>
                             <li><a href="http://www.776dh.com/" target="_blank">776福利导航</a></li>
@@ -209,7 +211,7 @@
                             <li><a href="http://www.cangjigedh.com/" target="_blank">藏姬阁导航</a></li>
                             <li><a href="http://www.1dh.info/" target="_blank">S站第一导航</a></li>
                             <li><a href="http://www.jpmdh.info/" target="_blank">金瓶梅福利导航</a></li>
-                            <li><a href="http://g.e20.ru/" target="_blank">绿色小导航</a></li>                              
+                                                         
 				    </ul>
 		</div>
 		</div>
@@ -307,6 +309,8 @@
 <li><a href="http://www.600zyz.com/" target="_blank">97资源站</a></li>
 <li><a href="http://www.avtai3.com/" target="_blank">AvTai</a></li>
 <li><a href="https://www.w832.com/" target="_blank">202z</a></li>
+<li><a href="http://www.fcw.xxx/" target="_blank">废柴网</a></li>
+<li><a href="http://www.twav12.com/" target="_blank">AV中文</a></li>
 <li><a href="http://www.youppp.com/" target="_blank">有B吗？</a></li>
 <li><a href="http://www.av8d.co/" target="_blank">琪琪涩原</a></li>
 <li><a href="http://www.777vid.com/" target="_blank">PLAY 视频</a></li>
@@ -481,7 +485,6 @@
 <li><a href="http://www.weipaifuliw.com/" target="_blank">微拍福利网</a></li>
 <li><a href="http://www.83252525.com/" target="_blank">微拍福利视频</a></li>
 <li><a href="http://www.fulishipin.info/" target="_blank">微拍福利哇卡呀</a></li>
-<li><a href="http://www.jiedianr.cn/">姐点儿直播</a></li>
 <li><a href="http://xftec.com/forum.php?x=2122570" target="_blank">夫妻吧</a></li>
 <li><a href="http://www.852867.com/?fromuid=776852" target="_blank">蝴蝶俱乐部</a></li>
 <li><a href="http://www.xy69.info/?fromuid=678142" target="_blank">逍遥游</a></li>
