--- a/index.html
+++ b/index.html
@@ -64,14 +64,16 @@
 <li><a href="http://www.xisezi.com/?fromuid=80" target="_blank">Xisezi精品社区</a></li>
 <li><a href="http://www.porna5.com/" target="_blank">Porn采集者</a></li>
 <li><a href="http://lu6vip.com/" target="_blank">撸6VIP网</a></li>
+<li><a href="http://www.bsm5.info/" target="_blank">本色猫福利站</a></li>
+<li><a href="http://www.yesir.info/forum.php" target="_blank">夜色精選論壇</a></li>
 <li><a href="http://www.mf28.xyz/" target="_blank">蜜蜂社区</a></li>
-<li><a href="http://www.yesir.co/forum.php" target="_blank">夜色精選論壇</a></li>
 <li><a href="http://twhav.com/?fromuid=73855" target="_blank">天空论坛</a></li>
-<li><a href="http://www.hdp2p.net/?fromuid=320" target="_blank">99爱唯工厂</a></li>
+<li><a href="http://www.99hdgc.com/?fromuid=320" target="_blank">99爱唯工厂</a></li>
 <li><a href="http://166.62.61.163/?fromuid=16201" target="_blank">涩呢妹·SNM</a></li>
 <li><a href="http://162.211.95.61/bbs/?fromuid=715" target="_blank">老王社区</a></li>
 <li><a href="http://97kaixin.com/" target="_blank">97开心</a></li>
 <li><a href="http://fuli3758.com/" target="_blank">福利社小说</a></li>
+<li><a href="http://www.yinshuku.com/" target="_blank">银书库</a></li>
 <li><a href="http://www.papapa88.com/?fromuid=123" target="_blank">啪啪啪88</a></li>
 <li><a href="http://6ni.info/forum.php" target="_blank">365论坛</a></li>
 <li><a href="http://18board.com/forum/" target="_blank">18p2p</a></li>
@@ -83,7 +85,7 @@
 <li><a href="http://173.192.147.22/?fromuid=1209073" target="_blank">爱碧论坛</a></li>
 <li><a href="http://www.kanxav.ml/?fromuid=1382595" target="_blank">XIAAV论坛</a></li>
 <li><a href="http://www.qiseshequ.info/" target="_blank">奇涩社区</a></li>
-<li><a href="http://aixxbbs.net/?fromuid=1199668" target="_blank">九爱城社区</a></li>
+<li><a href="http://www.aixbbs.xyz/?fromuid=1199668" target="_blank">九爱城社区</a></li>
 <li><a href="http://www.mayabeer.com/index.php" target="_blank">玛雅网</a></li>
 <li><a href="http://vip.taoyin365.com/?fromuid=153059" target="_blank">桃隐社区</a></li>
 <li><a href="http://www.avlang7.info/index.php?a=3886" target="_blank">AV狼</a></li>
@@ -115,7 +117,7 @@
 <li><a href="http://www.mimibeer.com/" target="_blank">咪咪爱</a></li>
 <li><a href="http://www.naluone-gp.com/forum/index.php" target="_blank">娜鲁湾论坛</a></li>
 <li><a href="http://www.ykt6.com/" target="_blank">迎客堂</a></li>
-<li><a href="http://dio88.net/?fromuid=2077160" target="_blank">魔王の家</a></li>
+<li><a href="http://dio66.net/?fromuid=2077160" target="_blank">魔王の家</a></li>
 <li><a href="http://204.152.220.36/?fromuid=62536" target="_blank">新巴黎中文社区</a></li>
 <li><a href="http://www.yxg163.com/?fromuid=5741" target="_blank">夜香阁</a></li>
 <li><a href="http://www.xmq03.com/" target="_blank">西门庆</a></li>
