--- a/index.html
+++ b/index.html
@@ -475,7 +475,7 @@
 		<strong><a name="/9/">信息交友</a></strong>
 		<div class="linkl">
 		<ul>
-<li><a href="http://iywzd.info/bbs/?fromuid=574073" target="_blank">欲望之都</a></li>
+<li><a href="https://iyd2017.com/bbs/?fromuid=574073" target="_blank">欲望之都</a></li>
 <li><a href="http://www.fu31.com/" target="_blank">互撸娃福利</a></li>
 <li><a href="http://www.39ye.com/?fromuid=54648" target="_blank">爱妻俱乐部</a></li>
 <li><a href="http://192.161.172.130/forum.php?fromuid=3479" target="_blank">欢乐夫妻</a></li>
