--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
 <li><a href="http://www.xmq03.com/" target="_blank">西门庆</a></li>
 <li><a href="http://www.jingjinglu2.com/" target="_blank">静静撸</a></li>
 <li><a href="https://www.nnpp99.com/" target="_blank">nnpp99</a></li>
+<li><a href="http://www.av0769.com/" target="_blank">宅男福利网</a></li>
 <li><a href="http://192.161.172.140/?fromuid=679071" target="_blank">御花王朝</a></li>
 <li><a href="http://www.ttsebbs.net/?fromuid=344876" target="_blank">顶涩网</a></li>
 <li><a href="http://c-street.us/bbs/?fromuid=164277" target="_blank">华人街</a></li>
@@ -181,7 +182,7 @@
                             <li><a href="http://www.idiyi.biz/" target="_blank">第一色导航</a></li>
                             <li><a href="https://www.gavdh.com/" target="_blank">GAV福利导航</a></li>
                             <li><a href="http://www.damodh.com/" target="_blank">51VOB导航</a></li>
-                            <li><a href="http://www.semmdh.com/" target="_blank">色妹妹导航</a></li>
+                            <li><a href="http://www.semmdh.net/" target="_blank">色妹妹导航</a></li>
                             <li><a href="http://www.pigutu.cc/" target="_blank">第一福利导航</a></li>
                             <li><a href="http://www.chaxue.pw/" target="_blank">插穴福利导航</a></li>
                             <li><a href="http://www.caoporn5.info/" target="_blank">超碰福利导航</a></li>
@@ -243,7 +244,9 @@
 <li><a href="http://9388av.com/" target="_blank">撸你妹吖</a></li>
 <li><a href="http://www.159cb.com/" target="_blank">159cb在线</a></li>
 <li><a href="http://www.8858av.com/" target="_blank">小电影</a></li>
+<li><a href="http://www.tvtv98.com/" target="_blank">婷婷五月</a></li>
 <li><a href="http://taohua888.info/" target="_blank">桃花视频</a></li>
+<li><a href="http://www.langnizi.com/" target="_blank">浪妮子视频</a></li>
 <li><a href="http://www.lxx01.co/" target="_blank">撸穴穴</a></li>
 <li><a href="http://www.56avs.us/" target="_blank">沃流视频</a></li>
 <li><a href="http://www.7u8e.com/" target="_blank">7菇8姨</a></li>
@@ -258,7 +261,6 @@
 <li><a href="http://www.912hh.vip/" target="_blank">912在线AV</a></li>
 <li><a href="http://www.cpzx1.pw/" target="_blank">超碰视频</a></li>
 <li><a href="http://www.taoluyingyuan.com/" target="_blank">套路影院</a></li>
-<li><a href="http://www.av0769.com/" target="_blank">东莞av</a></li>
 <li><a href="http://www.91lupao.com/" target="_blank">狠撸炮</a></li>
 <li><a href="http://qisevd.com/" target="_blank">奇色视频</a></li>
 <li><a href="http://benselulu.com/" target="_blank">本色视频</a></li>
@@ -268,19 +270,19 @@
 <li><a href="http://www.56ava.com/" target="_blank">桃花岛</a></li>
 <li><a href="http://91888.ga/" target="_blank">A福利视频</a></li>
 <li><a href="http://www.avlezi.com/" target="_blank">AV乐子</a></li>
-<li><a href="http://www.avsuo.com/" target="_blank">AVSUO在线</a></li>
-<li><a href="http://www.999zaixian.com/" target="_blank">久久碰</a></li>
-<li><a href="http://www.yiyiporn.com/" target="_blank">依依碰</a></li>
+<li><a href="http://www.caopengwang.top/" target="_blank">超碰AV网</a></li>
 <li><a href="http://www.caobiao345.com/" target="_blank">我要操婊</a></li>
+<li><a href="http://jiujiuredizhi.xyz/" target="_blank">团团热视频</a></li>
+<li><a href="http://chaopengzaixianshipin.xyz/" target="_blank">carpron97</a></li>
+<li><a href="http://jiujiureshipin.xyz/" target="_blank">久久热在线</a></li>
 <li><a href="http://www.yudongxian.com/" target="_blank">玉洞仙</a></li>
 <li><a href="http://lulunai.com/" target="_blank">撸撸奶</a></li>
 <li><a href="http://www.lu667.com/" target="_blank">撸一撸</a></li>
 <li><a href="http://www.99zzpp.com/" target="_blank">99自拍</a></li>
 <li><a href="http://go.60990.biz/" target="_blank">蝌蚪窝</a></li>
-<li><a href="http://www.uuszy.com/" target="_blank">悠色资源网</a></li>
+<li><a href="https://www.uuzy03.com/" target="_blank">悠色资源网</a></li>
 <li><a href="http://souav111.com/" target="_blank">搜AV视频</a></li>
 <li><a href="http://www.51luav.com/" target="_blank">51撸AV在线</a></li>
-<li><a href="http://www.yunav1.xyz/" target="_blank">AV云</a></li>
 <li><a href="http://lvn77.com/" target="_blank">撸女神</a></li>
 <li><a href="http://hhs02.com/" target="_blank">花和尚</a></li>
 <li><a href="http://www.meizyw.com/" target="_blank">mm资源网</a></li>
@@ -298,7 +300,7 @@
 <li><a href="http://www.lu2363.com/" target="_blank">撸尔山</a></li>
 <li><a href="http://qjj22.com/" target="_blank">骑姐姐</a></li>
 <li><a href="http://www.liuliucao.tv/" target="_blank">榴榴草</a></li>
-<li><a href="http://www.zz1200.com/" target="_blank">姐姐要爱</a></li>
+<li><a href="http://www.zz1212.com/" target="_blank">姐姐要爱</a></li>
 <li><a href="http://www.aikan888.com/" target="_blank">爱看视频</a></li>
 <li><a href="http://aishangvideo.com/" target="_blank">爱上视频</a></li>
 <li><a href="http://www.vod30.com/" target="_blank">VOD视频</a></li>
@@ -318,6 +320,7 @@
 <li><a href="http://www.777vid.com/" target="_blank">PLAY 视频</a></li>
 <li><a href="http://www.3jiuseteng.com/" target="_blank">九涩腾</a></li>
 <li><a href="http://www.jav2be.com/" target="_blank">绝色媚影</a></li>
+<li><a href="http://www.meimei7.com/" target="_blank">在线手机视频</a></li>
 <li><a href="http://www.jav513.com/" target="_blank">宅男频道</a></li>
 <li><a href="http://www.megaline.co/Cazn2" target="_blank">91porn</a></li>
 				    </ul>
@@ -625,6 +628,7 @@
 		<strong><a name="/13/">VR资源</a></strong>
 		<div class="linkl">
 		<ul>
+<li><a href="http://www.yikuvr.cc/" target="_blank">一库VR资源吧</a></li>
 <li><a href="http://www.daoguovr.cc/?fromuid=22908" target="_blank">岛国VR网</a></li>
 <li><a href="http://vrporn.com/" target="_blank">VRPorn</a></li>
 <li><a href="https://www.sexlikereal.com/" target="_blank">SexLikeReal</a></li>
@@ -660,6 +664,7 @@
 		<div class="linkl">
 		<ul>
 <li><a href="http://91.t9j.space/?fromuid=697480" target="_blank">91自拍论坛</a></li>
+<li><a href="http://www.3515.pw/" target="_blank">爱心社</a></li>
 <li><a href="http://www.bzjkzc.com/" target="_blank">福利gif出处</a></li>
 <li><a href="http://www.bvfpei.com/" target="_blank">邪恶GIF</a></li>
 <li><a href="http://www.nucvrj.com/" target="_blank">美女生活照</a></li>
@@ -678,7 +683,7 @@
 <li><a href="http://www.dbmeinv.com/" target="_blank">豆瓣美女</a></li>
 <li><a href="http://www.pornpicc.com/" target="_blank">妹子图控</a></li>
 <li><a href="http://www.sousi8.cc/" target="_blank">搜丝吧</a></li>
-<li><a href="http://www.guomo.love/?fromuid=130143" target="_blank">国模</a></li>
+<li><a href="http://www.guomo.link/?fromuid=130143" target="_blank">国模</a></li>
 <li><a href="http://www.17345.com/" target="_blank">三次元</a></li>
 <li><a href="http://asiangirlcunt.com/" target="_blank">asiangirlcunt</a></li>
 <li><a href="http://www.hqseek.com/" target="_blank">hqseek</a></li>
@@ -690,7 +695,6 @@
 <li><a href="http://www.nudevideoswallpapers.com/" target="_blank">裸女壁纸</a></li>
 <li><a href="http://ftop.ru/" target="_blank">ftop壁纸</a></li>
 <li><a href="http://imagezog.com/" target="_blank">ImageZog</a></li>
-<li><a href="http://www.spidergif.com/" target="_blank">SPIDER</a></li>
 <li><a href="http://xxgifs.com/" target="_blank">xxGifs</a></li>
 <li><a href="http://www.jigglegifs.com/" target="_blank">JiggleGifs</a></li>
 <li><a href="http://www.porndao.net/" target="_blank">Porndao</a></li>
