--- a/index.html
+++ b/index.html
@@ -518,7 +518,7 @@
 <li><a href="http://www.wndflb.com/" target="_blank">福利吧论坛</a></li>
 <li><a href="http://www.douban.com/group/yaoqingzhuce/" target="_blank">邀请码小组</a></li>
 <li><a href="http://10086.pw/?fromuid=1539" target="_blank">找福利网论坛</a></li>
-<li><a href="http://10086.pw/?fromuid=1539" target="_blank">找福利网论坛</a></li>
+<li><a href="http://www.wg438.com/" target="_blank">超碰论坛</a></li>
 <li><a href="http://fltty.net/" target="_blank">福利天天有</a></li>
 <li><a href="http://www.trqcyx.com/" target="_blank">成人糗事</a></li>
 <li><a href="http://www.yuliyazhu.com/" target="_blank">宅男福利社</a></li>
