--- a/index.html
+++ b/index.html
@@ -175,6 +175,7 @@
                             <li><a href="http://att12.com/" target="_blank">A天堂导航</a></li>
                             <li><a href="http://doufu2.com/" target="_blank">豆福色导航</a></li>
                             <li><a href="http://www.dabodh.com/" target="_blank">大波导航</a></li>
+                            <li><a href="http://74fuli.net/" target="_blank">骑士福利导航</a></li>
                             <li><a href="http://bigefuli.com/" target="_blank">逼格福利导航</a></li>
                             <li><a href="http://www.776dh.com/" target="_blank">776福利导航</a></li>
                             <li><a href="http://www.666k6.com/" target="_blank">666福利导航</a></li>
