--- a/index.html
+++ b/index.html
@@ -235,6 +235,8 @@
 <li><a href="http://hongxingme.com/" target="_blank">红杏视频</a></li>
 <li><a href="http://mymmv2.com/" target="_blank">V2视频</a></li>
 <li><a href="http://d8lulu.com/" target="_blank">D8视频</a></li>
+<li><a href="http://ziyule.xyz/" target="_blank">3pfun</a></li>
+<li><a href="http://www.avsuo.xyz/" target="_blank">自娱乐</a></li>
 <li><a href="http://sae8.info/1.php" target="_blank">sae8</a></li>
 <li><a href="http://www.91av.club/" target="_blank">91AV俱乐部</a></li>
 <li><a href="http://www.luduobao.in/" target="_blank">撸多宝</a></li>
